--- a/CustomListTest/CustomListTest.csproj
+++ b/CustomListTest/CustomListTest.csproj
@@ -52,6 +52,8 @@
     <Compile Include="AddMethodTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveMethodTest.cs" />
+    <Compile Include="ToStringTest.cs" />
+    <Compile Include="AddOperatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
